--- a/package.json
+++ b/package.json
@@ -1,75 +1,82 @@
 {
-  "name": "vxe-table-plugin-antd",
-  "version": "1.11.3",
-  "description": "基于 vxe-table 表格的适配插件，用于兼容 ant-design-vue 组件库",
-  "scripts": {
-    "lib": "gulp build"
-  },
-  "files": [
-    "dist",
-    "*.ts",
-    "*.d.ts",
-    "style.scss"
+	"name": "@asbeyas/vxe-table-plugin-antd",
+	"version": "1.11.3",
+	"description": "基于 vxe-table 表格的适配插件，用于兼容 ant-design-vue 组件库",
+	"scripts": {
+		"lib": "gulp build"
+	},
+	"files": [
+		"dist",
+		"*.ts",
+		"*.d.ts",
+		"style.scss"
+	],
+	"main": "dist/index.common.js",
+	"unpkg": "dist/index.umd.js",
+	"jsdelivr": "dist/index.umd.js",
+	"style": "dist/style.css",
+	"typings": "index.ts",
+	"devDependencies": {
+		"@babel/core": "^7.12.3",
+		"@babel/plugin-transform-runtime": "^7.12.1",
+		"@babel/preset-env": "^7.12.1",
+		"@babel/runtime": "^7.12.5",
+		"@typescript-eslint/eslint-plugin": "^4.6.1",
+		"@typescript-eslint/parser": "^4.6.1",
+		"del": "^6.0.0",
+		"eslint": "^7.13.0",
+		"eslint-config-prettier": "^6.15.0",
+		"eslint-config-standard": "^16.0.1",
+		"eslint-friendly-formatter": "^4.0.1",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-promise": "^4.2.1",
+		"eslint-plugin-standard": "^4.0.2",
+		"eslint-plugin-typescript": "^0.14.0",
+		"gulp": "^4.0.2",
+		"gulp-autoprefixer": "^7.0.1",
+		"gulp-babel": "^8.0.0",
+		"gulp-clean-css": "^4.3.0",
+		"gulp-concat": "^2.6.1",
+		"gulp-rename": "^2.0.0",
+		"gulp-replace": "^1.0.0",
+		"gulp-sass": "^5.1.0",
+		"gulp-sourcemaps": "^2.6.5",
+		"gulp-typescript": "^5.0.1",
+		"gulp-uglify": "^3.0.2",
+		"lodash": "^4.17.21",
+		"markdown-doctest": "^1.1.0",
+		"prettier": "^2.1.2",
+		"sass": "^1.52.2",
+		"typescript": "^4.0.5",
+		"vue": "^2.6.14",
+		"vxe-table": "^3.4.4",
+		"xe-utils": "^3.4.0"
+	},
+	"peerDependencies": {
+		"vxe-table": ">= 2.10.0 || >= 3.2.0 || < 4"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/asbeyas/vxe-table-plugin-antd.git"
+	},
+	"keywords": [
+		"vxe-table",
+		"vxe-table plugins"
+	],
+	"author": {
+		"name": "Xu Liangzhan",
+		"email": "xu_liangzhan@163.com"
+	},
+  "contributors": [
+    {
+      "name": "Ty L"
+    }
   ],
-  "main": "dist/index.common.js",
-  "unpkg": "dist/index.umd.js",
-  "jsdelivr": "dist/index.umd.js",
-  "style": "dist/style.css",
-  "typings": "index.ts",
-  "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/runtime": "^7.12.5",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "del": "^6.0.0",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-config-standard": "^16.0.1",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.2",
-    "eslint-plugin-typescript": "^0.14.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-babel": "^8.0.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-typescript": "^5.0.1",
-    "gulp-uglify": "^3.0.2",
-    "markdown-doctest": "^1.1.0",
-    "prettier": "^2.1.2",
-    "typescript": "^4.0.5",
-    "vue": "^2.6.14",
-    "vxe-table": "^3.4.4",
-    "xe-utils": "^3.4.0"
-  },
-  "peerDependencies": {
-    "vxe-table": ">= 2.10.0 || >= 3.2.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/x-extends/vxe-table-plugin-antd.git"
-  },
-  "keywords": [
-    "vxe-table",
-    "vxe-table plugins"
-  ],
-  "author": {
-    "name": "Xu Liangzhan",
-    "email": "xu_liangzhan@163.com"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/x-extends/vxe-table-plugin-antd/issues"
-  },
-  "homepage": "https://github.com/x-extends/vxe-table-plugin-antd#readme"
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/asbeyas/vxe-table-plugin-antd/issues"
+	},
+	"homepage": "https://github.com/asbeyas/vxe-table-plugin-antd#readme"
 }
